# LfafM

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: ci.yml
LfafH/: RegularLanguage.h
Source/: RegularLanguage.cpp
include/lfaf/: RegularLanguage.h
src/: RegularLanguage.cpp  main.cpp
tests/: regular_language_tests.cpp
